--- a/css/style.css
+++ b/css/style.css
@@ -23,14 +23,19 @@ body {
     justify-content: space-around;
 }
 
+.wrap {
+    flex-wrap: wrap;
+}
+
 .flex-end {
     justify-content: flex-end;
 }
 
 /* HEADER */
+
 header {
     height: 35px;
-    padding: 0 10px;
+    padding: 0 5px;
 }
 
 header span {
@@ -45,4 +50,31 @@ header span {
 main {
     height: calc(100vh - 115px);
     overflow: auto;
+    padding: 30px 40px;
+    text-align: center;
+}
+
+main .user {
+    position: relative;
+    display: inline-block;
+    width: 244px;
+    height: 144px;
+}
+
+main img {
+    width: 100%;
+    height: 100%;
+}
+
+main .username {
+    position: absolute;
+    left: 0;
+    bottom : 0;
+    background-color: rgba(255, 255, 255, 0.2);
+}
+
+/* FOOTER */
+
+footer {
+    background-color: #222222;
 }
