--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     color: white;
-    background-color: black;
 }
 
 /* UTILITIES */
@@ -20,7 +19,7 @@ body {
 }
 
 .justify-sb {
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .wrap {
@@ -31,9 +30,14 @@ body {
     justify-content: flex-end;
 }
 
+.flex-col {
+    flex-direction: column;
+}
+
 /* HEADER */
 
 header {
+    background-color: black;
     height: 35px;
     padding: 0 5px;
 }
@@ -48,6 +52,7 @@ header span {
 /* MAIN */
 
 main {
+    background-color: black;
     height: calc(100vh - 115px);
     overflow: auto;
     padding: 30px 40px;
@@ -76,5 +81,26 @@ main .username {
 /* FOOTER */
 
 footer {
+    height: 80px;
     background-color: #222222;
+}
+
+footer .icon-txt {
+    text-align: center;
+}
+
+footer .icon {
+    font-size: 2em;
+    padding-bottom: 3px;
+}
+
+footer .chevron-up {
+    font-size: 10px;
+    font-weight: 800;
+    height: 8px;
+    padding: 0 15px;
+}
+
+footer .end-meeting {
+
 }
