--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,10 @@ body {
     justify-content: space-between;
 }
 
+.justify-center {
+    justify-content: center;
+}
+
 .wrap {
     flex-wrap: wrap;
 }
@@ -42,7 +46,7 @@ header {
     padding: 0 5px;
 }
 
-header span {
+header button {
     background-color: rgba(255, 255, 255, 0.3);
     border: none;
     padding: 5px;
@@ -54,7 +58,7 @@ header span {
 main {
     background-color: black;
     height: calc(100vh - 115px);
-    overflow: auto;
+    overflow-y: auto;
     padding: 30px 40px;
     text-align: center;
 }
@@ -64,11 +68,13 @@ main .user {
     display: inline-block;
     width: 244px;
     height: 144px;
+    border: 2px solid black;
 }
 
 main img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
 main .username {
