--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,10 @@ footer {
     background-color: #222222;
 }
 
+.ft-left, .ft-middle, .ft-right {
+    flex-shrink: 0;
+}
+
 footer .icon-txt {
     text-align: center;
     padding: 0 15px;
